[gd_scene load_steps=18 format=3 uid="uid://dio4jhhmyfnfk"]

[ext_resource type="Script" path="res://Audio/audio_manager.gd" id="1_bc1sq"]
[ext_resource type="AudioStream" uid="uid://cxi8ymtu4ltrm" path="res://Audio/Music/boss_battle_9_metal_loop.wav" id="2_bwriu"]
[ext_resource type="AudioStream" uid="uid://dcyv4n1xwal27" path="res://Audio/SFX/chaching.mp3" id="2_njsjt"]
[ext_resource type="AudioStream" uid="uid://da12xto83almg" path="res://Audio/Music/boss_battle_10_metal.wav" id="3_2jfjf"]
[ext_resource type="Script" path="res://Scripts/pausable_audio.gd" id="3_44aal"]
[ext_resource type="AudioStream" uid="uid://bfkfkmptikkw" path="res://Audio/SFX/reload.mp3" id="3_cprti"]
[ext_resource type="AudioStream" uid="uid://c5i52e0b2nr77" path="res://Audio/SFX/handgun_A_shTL_single_01.wav" id="4_julhn"]
[ext_resource type="AudioStream" uid="uid://y8rivnhdnic5" path="res://Audio/SFX/shotgun_A_shTL_single_03.wav" id="5_gcodo"]
[ext_resource type="AudioStream" uid="uid://b8vwhqu1qtnex" path="res://Audio/SFX/rifle_A_shTL_single_01.wav" id="6_yv6vl"]
[ext_resource type="AudioStream" uid="uid://cdbipnhosknlo" path="res://Audio/SFX/submngun_A_shTL_single_03.wav" id="7_jqyjb"]
[ext_resource type="AudioStream" uid="uid://64dgywnvyud3" path="res://Audio/SFX/revolver_B_shTL_single_06.wav" id="8_y1w1i"]
[ext_resource type="AudioStream" uid="uid://vocaf6aowdyk" path="res://Audio/SFX/assault_A_shTL_single_04.wav" id="9_nqm8h"]
[ext_resource type="AudioStream" uid="uid://m8vxicxyfjbi" path="res://Audio/SFX/explosion.mp3" id="10_xn4yj"]
[ext_resource type="AudioStream" uid="uid://bcqv2c0rxis70" path="res://Audio/SFX/bark.mp3" id="11_ha5qg"]
[ext_resource type="AudioStream" uid="uid://bs88wxq5gmxne" path="res://Audio/SFX/impact.wav" id="13_bcjed"]
[ext_resource type="AudioStream" uid="uid://cuj58fc2mnakt" path="res://Audio/Music/once_more_metal.wav" id="14_36he3"]
[ext_resource type="AudioStream" uid="uid://beatxr45ab02o" path="res://Audio/Music/raspberry_jam.ogg" id="17_v70ed"]

[node name="AudioManager" type="Node"]
process_mode = 3
script = ExtResource("1_bc1sq")
stage_songs = [ExtResource("2_bwriu"), ExtResource("3_2jfjf"), ExtResource("14_36he3")]

[node name="Chaching" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_njsjt")
bus = &"SFX"
script = ExtResource("3_44aal")

[node name="Reload" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_cprti")
volume_db = -5.0
bus = &"SFX"
script = ExtResource("3_44aal")

[node name="GunshotPistol" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_julhn")
bus = &"SFX"
script = ExtResource("3_44aal")

[node name="GunshotShotgun" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_gcodo")
bus = &"SFX"
script = ExtResource("3_44aal")

[node name="GunshotRifle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_yv6vl")
bus = &"SFX"
script = ExtResource("3_44aal")

[node name="GunshotSMG" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jqyjb")
bus = &"SFX"
script = ExtResource("3_44aal")

[node name="GunshotRevolver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_y1w1i")
bus = &"SFX"
script = ExtResource("3_44aal")

[node name="GunshotAssault" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_nqm8h")
bus = &"SFX"
script = ExtResource("3_44aal")

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_xn4yj")
pitch_scale = 1.5
bus = &"SFX"
script = ExtResource("3_44aal")

[node name="Bark" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_ha5qg")
bus = &"SFX"
script = ExtResource("3_44aal")

[node name="BulletImpact" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_bcjed")
bus = &"SFX"
script = ExtResource("3_44aal")

[node name="StageMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_36he3")
bus = &"Music"

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_v70ed")
bus = &"Music"
